# extract_usernames

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  NOTION_SETUP.md  README.md  extract_usernames.py  ground_truth.csv  instagram_validator.py  leads_to_notion.py  notion_manager.py  prompt.xml  pyproject.toml  requirements.txt  setup.ps1  setup.py  setup.sh
docs/: DEDUPLICATION.md
extract_usernames/: __init__.py  cli.py  cli_merge_duplicates.py  config.py  instagram_validator.py  main.py  notion_manager.py  notion_sync.py  prompts.py
extract_usernames/_archive/: __init__.py  extract_usernames.py
extract_usernames/integrations/: __init__.py  notion_deduplicator.py  notion_manager.py  notion_sync.py
extract_usernames/ocr/: __init__.py  prompts.py
scripts/: README.md  setup.sh
