[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-username-extractor"
version = "2.0.0"
description = "Extract Instagram usernames from screenshots with VLM+OCR dual-engine validation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rahi Khan", email = "beyourahi@gmail.com"}
]
maintainers = [
    {name = "Rahi Khan", email = "beyourahi@gmail.com"}
]
keywords = [
    "instagram",
    "ocr",
    "username",
    "extraction",
    "vlm",
    "notion",
    "vision-language-model",
    "easyocr",
    "lead-generation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing :: General",
]

# Dependencies are read from requirements.txt
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
]

[project.urls]
Homepage = "https://github.com/beyourahi/extract_usernames"
Repository = "https://github.com/beyourahi/extract_usernames"
Issues = "https://github.com/beyourahi/extract_usernames/issues"
Changelog = "https://github.com/beyourahi/extract_usernames/blob/main/README.md#changelog"
Documentation = "https://github.com/beyourahi/extract_usernames#readme"

[project.scripts]
extract-usernames = "extract_usernames.cli:main"

[tool.setuptools]
packages = ["extract_usernames", "extract_usernames.ocr", "extract_usernames.integrations", "extract_usernames._archive"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | _archive
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = ["_archive", "tests"]

[tool.coverage.run]
source = ["extract_usernames"]
omit = [
    "extract_usernames/_archive/*",
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
